overlays/prod/frontapp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontapp
  labels:
    homework: frontapp
spec:
  ingressClassName: nginx
  rules:
    - host: application.cubix.localhost
      http:
        paths:
          - path: /frontapp
            pathType: Prefix
            backend:
              service:
                name: frontapp
                port:
                  number: 8080
